--- a/css/1.css
+++ b/css/1.css
@@ -15,6 +15,39 @@ body{background: url("/img/1.png")}
     height:7vh;  
   }
 
+  header .Menu{
+    position:relative;
+    display:inline;
+    font-size:2.4vh;
+    top:-32px;
+  }
+
+  header li a{
+    position:relative;
+    color:white;
+  }
+
+  header li a:hover{
+    border-bottom: 5px solid red;
+    transition: 0.2s;
+  }
+
+  header .Sub-Menu{
+    position:absolute;
+    background-color:black;
+    text-align: center;
+    height:9vh;
+    width: 15%;
+    left:150vh;
+  }
+
+
+
+/*
+
+
+
+
   header li{
     position:relative;
     display:inline;
@@ -32,6 +65,7 @@ body{background: url("/img/1.png")}
     background-color:red;
     top
   }
+  /*
 /*
   header .Sub-Menu{
     position:absolute;
@@ -60,12 +94,9 @@ body{background: url("/img/1.png")}
     background-color:black;
   }*/
 
-  a .Img-Logo{
-    position:relative;
-    top:-45px;
-    left:-20px;
-    width:10%;
-  }
+
+ 
+
 
   @media (max-width: 768px){
   
