--- a/css/1.css
+++ b/css/1.css
@@ -7,119 +7,83 @@ body{background: url("/img/1.png")}
     box-sizing: border-box;
   }
 
-  header{
-    position:relative;
-    background-color: black;
-    text-align:right;
-    width: 100%;
-    height:7vh;  
-  }
 
-  header .Menu{
-    position:relative;
-    display:inline;
-    font-size:2.4vh;
-    top:-32px;
-  }
-
-  header li a{
-    position:relative;
+  .Menu{
+    display: inline;
     color:white;
   }
 
-  header li a:hover{
-    border-bottom: 5px solid red;
-    transition: 0.2s;
-  }
-
-  header .Sub-Menu{
-    position:absolute;
-    background-color:black;
-    text-align: center;
-    height:9vh;
-    width: 15%;
-    left:150vh;
-  }
-
-
-
-/*
-
-
-
-
-  header li{
-    position:relative;
-    display:inline;
-    font-size:2.1vh;
-    top:-103px;
-  }
-
-  header a:hover{
-    position:relative;
-   border-bottom:5px solid red;
-  }
-
-  header a{
-    color:white;
-    background-color:red;
-    top
-  }
-  /*
-/*
-  header .Sub-Menu{
-    position:absolute;
-    display:block;
-    text-align:center;
-    background-color:black;
-    color:white;
-    height:200px;
+section{
+    position: relative;
+    justify-content: center;
     width:100%;
-    left:9%;
-    top:100px;
-  }*/
+    text-align:right;
+    display:inline-block;
+    background-color: black;
+    height:55px;
+    margin-bottom: 24px;
+}
 
- 
-
- 
-  
-
-
-
-
-/*
-  header .Cuenta:hover .Sub-Menu{
-    position:relative;
-    display:block;
+section a{
+    position: relative;
+    justify-content: center;
+    color:white;
+    font-size:17px;  
+    top:-2px;   
+}
+            
+section li{
     background-color:black;
-  }*/
+      position: relative;
+      width:100%;
+      height:30px;   
+      border:1px solid #000;
+      display: inline-block;
+      top:-28px;
+}
+
+.Sub-Menu{
+    position: relative;
+    text-align: center;
+    width:155%;
+    height:48px;
+    top:-0.1vh;
+    left:-5vh;
+}
+       
+section li:hover{
+      border-bottom: 5px solid red;
+}
+
+section li a:hover {
+  color:bisque;
+}
+
+            
+section li>ul{
+    display:none;
+}
+
+section li:hover>ul{
+      display:block;
+      position:absolute;
+      top:30px;
+      left:-10px;
+}
 
 
- 
+ a .Img-Logo{
+   position:absolute;
+   width:8%;
+   top:18px;
+   left:17px;
+ }
+
 
 
   @media (max-width: 768px){
   
-    header{
-    position:relative;
-    text-align:right;
-    height:200px;
-    }
-
-  header .Menu{
-    position:relative;
-    margin-left:35px;
-    font-size:20px;
-    top:-25px;
-  }
-
-  a .Img-Logo{
-    position:relative;
-    border:5px solid gray;
-    top:-170px;
-    left:10px;
-    border-radius:5px;
-  }
+  
 }
 
 
