--- a/css/1.css
+++ b/css/1.css
@@ -1,165 +1,61 @@
 body{background: url("/img/1.png")}
 
 *{
-    padding:20px;
+    padding:0;
+    margin: 0;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
-    top:1vh;
   }
 
- nav{
+ section{
    position: relative;
-   background-color: black;
-   text-align: right;
-   height:3vh;
+   background-color: silver;
+   text-align: center;
+   height:50px;
+   width: 100%;
  }
 
- nav a{
-  color:white;
-  margin:0;
-  padding:0;
-  font-size:2.7vh;
-}
-
-
- nav #Opcion-1{
+ section h1{
    position:relative;
-   display: inline-block;
-   top:-11.8vh;
+   top:13px;
+   font-size: 17px;
+   font-family: Arial, Helvetica, sans-serif;   
  }
 
- nav #Opcion-1 a:hover{
-  border-bottom:5px solid red;
+ section  .Presentacion{
+   position: relative;
+   width:100%;
+   height:200px;
+   top:20px;
+   background-color:black;
+
+ }
+
+  section a .Img-Logo{
+    position:absolute;
+    top:80px;
+    left:700px;
+  }
+
+  section .Div-Buscar{
+    position:relative;
+    top:-110px;
+    text-align: right;
+  }
+
+  section .Buscar{
+   position:relative;
+   width: 20%;
+   height:40px;
+   left:-170px;
+   border-radius:20px;
+  }
+
+  section .Div-Buscar #Icon-Buscar{
+    position:relative;
+    left:-200px;
+  }
+
+
  
- }
-
- #Opcion-1 a{
-   position:relative;
-   left:6vh;
-   top:0vh;
- }
-
- nav .Cuenta ul{
-  position:absolute; 
-  background-color: black;
-  top:10vh;
-  left:-5vh;
-  height:27vh;
-  display:none;
-  }
-
- nav #Opcion-2{
-  position:relative;
-  margin: 0;
-  padding:0;
-  width: 130%;
-  left:-9.8vh;
-  top:-2vh;
-}
-
-  nav #Opcion-2 i:hover{
-    border-bottom: 5px solid red;
-  }
-
-  nav .Cuenta:hover ul{
-    display:block;
-  }
-
-
-
-
-
-
-
-
-/*
- .Cuenta ul{
-    position:relative;
-    background-color: black;
-    color:white;
-    width:106%;
-    left:-10vh;
-    height:15vh;
-    display:none;
- }
-
- .Cuenta a{}
-
-
-*/
-
- /*
- .Cuenta #Opcion-2{
-   position:relative;
-   width:50%;
-   height:5vh;
-   left:-7vh;
-    top:10vh;
-    font-size: 10vh;
-    display:inline-block;
- }
-
- .Cuenta ul a li{
-   font-size:2vh;
- }
-
-
- ul #Opcion-1{
-   position:relative;
-   width:20%;
-   display:inline;
-   left:5vh;
-   top:-9vh;
- }
-*/
-/*
-  #Opcion-1 a{
-    color:white;
-    font-size:3.2vh;
-    margin: 0;
-    padding:0;
-  }
-
-  #Opcion-1 a:hover{
-    color:bisque;
-    border-bottom: 5px solid red;
-  }
-
-
-
-  #Opcion-2 {
-    position:relative;
-    color:white;
-  
-    top:-9.5vh;
-    left:5vh;
-    width:15%;
-  }
-
-
-*/
-
-
-
-  @media (max-width: 768px){
-
-
-  section{
-    position:relative;
-    text-align:left;
-    background-color:gray;
-  }
-
-  section ul .Menu{
-    position:relative;
-    font-size: 2vh;
-    margin-left:2vh;
-    left:-1.7vh;
-  }
-  
-}
-
-
-
-
