--- a/css/1.css
+++ b/css/1.css
@@ -8,54 +8,106 @@ body{background: url("/img/1.png")}
     box-sizing: border-box;
   }
 
- section{
+  header .Nav-Opciones{
+    position:relative;
+    text-align:right;
+  }
+
+  .Nav-Opciones ul li{
+    position:relative;
+    display:inline-block;
+    font-size:30px;
+    margin-left: 50px; 
+    top:-14px;
+    left:-20px;   
+  }
+
+  .Nav-Opciones ul i:hover{
+    color:navy;
+    border-bottom: 5px solid red;
+  }
+
+
+
+  .Nav-Opciones a{
+    position: relative;
+    l
+  }
+
+   /*
+
+  header a {
+    position:relative;
+    left:-1000px;
+  }
+*/
+   .Publicidad{
+    position:relative;
+    text-align: left;
+    background-color:silver;
+    font-family: Arial, Helvetica, sans-serif;  
+    font-size: 7px;
+    width:100%;
+    height: 38px;
+  }
+  
+  #Titulo{
+    position:relative;
+    top:12px;
+    font-family: Arial, Helvetica, sans-serif; 
+    left:15px; 
+  }
+
+  .Presentacion-1{
    position: relative;
-   background-color: silver;
+   background-color: black;
    text-align: center;
-   height:50px;
    width: 100%;
+   height:150px;
  }
 
- section h1{
-   position:relative;
-   top:13px;
-   font-size: 17px;
-   font-family: Arial, Helvetica, sans-serif;   
- }
-
- section  .Presentacion{
+ .Img-Logo{
    position: relative;
-   width:100%;
-   height:200px;
-   top:20px;
-   background-color:black;
-
+   top:10px;
+    left:150px;
+   width: 8%;
  }
 
-  section a .Img-Logo{
-    position:absolute;
-    top:80px;
-    left:700px;
-  }
-
-  section .Div-Buscar{
-    position:relative;
-    top:-110px;
-    text-align: right;
-  }
-
-  section .Buscar{
+ div .Buscar{
    position:relative;
-   width: 20%;
-   height:40px;
-   left:-170px;
-   border-radius:20px;
-  }
-
-  section .Div-Buscar #Icon-Buscar{
-    position:relative;
-    left:-200px;
-  }
+   top:-70px;
+   left:970px;
+   width:19%;
+   height:50px;
+   border-radius: 10px;
+   background-color:antiquewhite;
+ }
 
 
- 
+
+
+
+
+
+
+
+
+
+
+  .Presentacion-2{
+   position:relative;
+   text-align: center;
+   width: 100%;
+   background-color: navy;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size:9px;  
+ }
+
+
+
+ .Presentacion-2 h1{
+  color:red;  
+ }
+
+
+
