--- a/css/1.css
+++ b/css/1.css
@@ -18,29 +18,14 @@ body{background: url("/img/1.png")}
     display:inline-block;
     font-size:30px;
     margin-left: 50px; 
-    top:-14px;
+    top:2px;
     left:-20px;   
   }
 
   .Nav-Opciones ul i:hover{
-    color:navy;
     border-bottom: 5px solid red;
   }
 
-
-
-  .Nav-Opciones a{
-    position: relative;
-    l
-  }
-
-   /*
-
-  header a {
-    position:relative;
-    left:-1000px;
-  }
-*/
    .Publicidad{
     position:relative;
     text-align: left;
@@ -51,7 +36,7 @@ body{background: url("/img/1.png")}
     height: 38px;
   }
   
-  #Titulo{
+  .Publicidad #Titulo{
     position:relative;
     top:12px;
     font-family: Arial, Helvetica, sans-serif; 
@@ -64,50 +49,94 @@ body{background: url("/img/1.png")}
    text-align: center;
    width: 100%;
    height:150px;
+   border-bottom:10px solid DarkRed;
  }
 
- .Img-Logo{
+ div .Img-Logo{
    position: relative;
    top:10px;
-    left:150px;
+   left:10px;
    width: 8%;
  }
 
- div .Buscar{
-   position:relative;
-   top:-70px;
-   left:970px;
-   width:19%;
-   height:50px;
-   border-radius: 10px;
-   background-color:antiquewhite;
- }
+ .Portada{
+  display:float;
+  position:relative;
+  background-color:Bisque;
+  width: 100%;
+  height:370px;
+  top:0;
 
+}
 
+.Portada .Portada-Frases{
+  position:relative;
+  width: 55%;
+  height:300px;
+  top:30px;
+}
 
-
-
-
-
-
-
-
+.Portada img{
+  position:relative;
+  width:44%;
+  height:auto;
+  top: -290px;
+  left:817px;
+  animation:cambio 5s infinite alternate linear;
+}
 
 
   .Presentacion-2{
    position:relative;
    text-align: center;
    width: 100%;
+   height:38px;
    background-color: navy;
    font-family: Arial, Helvetica, sans-serif;
    font-size:9px;  
  }
 
-
-
- .Presentacion-2 h1{
-  color:red;  
+ .Presentacion-2 .Buscar{
+   position:relative;
+   text-decoration: none;
+   outline: none;
+   left:500px;
+   top:-17.5px;
+   width:15%;
+   height:30px;
+   border-radius:5px;
+   background-color: antiquewhite;
  }
 
+ .Presentacion-2 h1{
+  position:relative;
+  top:10px;
+ }
+
+
+
+@keyframes cambio{
+  
+  0%{
+    margin-left: 0;
+    background-color:darkred;
+    border-radius: 10px;   
+}
+40%{
+    margin-left: 0;
+    background-color:rebeccapurple; 
+    border-radius: 10px;  
+}
+
+80%{
+    margin-left: 0;
+    background-color:darkgreen;
+    border-radius: 10px;   
+}
+
+
+
+
+}
 
 
