--- a/css/1.css
+++ b/css/1.css
@@ -76,13 +76,21 @@ body{background: url("/img/1.png")}
   top:30px;
 }
 
-.Portada img{
+.Img-Portada {
   position:relative;
-  width:44%;
-  height:auto;
-  top: -290px;
-  left:817px;
-  animation:cambio 5s infinite alternate linear;
+  border-radius:10px;
+  width:43%;
+  height:360px;
+  top: -296px;
+  left:810px;
+  animation: Brillo 20s infinite alternate linear;
+}
+
+.Img-Portada img{
+  position:relative;
+  width:100%;
+  top:1px;
+  left:0px;
 }
 
 
@@ -114,29 +122,27 @@ body{background: url("/img/1.png")}
  }
 
 
-
-@keyframes cambio{
+ @keyframes Brillo{
+	
+  0% {
+	  border: 10px solid black;    
+	}
   
-  0%{
-    margin-left: 0;
-    background-color:darkred;
-    border-radius: 10px;   
-}
-40%{
-    margin-left: 0;
-    background-color:rebeccapurple; 
-    border-radius: 10px;  
-}
+	33.3333% {
+    border: 10px solid gray;  
+	}
 
-80%{
-    margin-left: 0;
-    background-color:darkgreen;
-    border-radius: 10px;   
-}
+	66.666% {
+    border: 10px solid navy;   
+	}
+
+	100% {
+    border: 10px solid red;   
+	}
+
+  }
 
 
 
-
-}
 
 
