--- a/css/1.css
+++ b/css/1.css
@@ -1,7 +1,7 @@
 body{background: url("/img/1.png")}
 
 *{
-   position:relative;
+    position:relative;
     max-width: 99%;
     left:5px;
     top:5px;
@@ -10,167 +10,83 @@ body{background: url("/img/1.png")}
     box-sizing: border-box;
   }
 
-.grid-container{
-  display: grid;
-  text-align: right;
-  grid-template-columns:auto;
-  grid-template-rows:auto auto auto;
-}
-
-.grid-container div{
-  /*border: 10px solid black;*/
-}
-
-
-.grid-container .Nav-Opciones{
-  background-color: silver;
-  position:relative;
-  width: 100%;
-  height: 45px;
-  top: -10px;
-}
-
-.grid-container .Nav-Opciones li{
-  position: relative;
-  display: inline;
-  margin-left: 70px;
-  font-size: 30px;
-  left:-10px;
-  top:-5px;
-}
-
-
-.grid-container .Nav-Opciones  i:hover{
-   border-bottom:5px solid darkred;
-}
-
-.Img-Logo{
-  position:relative;
-  left:-1330px;
-  top: -56px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-  header .Nav-Opciones{
-    position:relative;
-    text-align:right;
-  }
-
-  .Nav-Opciones ul li{
-    position:relative;
-    display:inline-block;
-    font-size:30px;
-    margin-left: 50px; 
-    top:2px;
-    left:-20px;   
-  }
-
-  .Nav-Opciones ul i:hover{
-    border-bottom: 5px solid red;
-  }
-
-  .Nav-Opciones a .Img-Logo{
-    position: relative;
-    top:4px;
-    left:-900px;
-    width: 8em;
-  }
- 
-
-   .Publicidad{
-    position:relative;
-    text-align: left;
-    background-color:silver;
-    font-family: Arial, Helvetica, sans-serif;  
-    font-size: 7px;
-    width:100%;
-    height: 38px;
-  }
+.Div-Principal{
   
-  .Publicidad #Titulo{
-    position:relative;
-    top:12px;
-    font-family: Arial, Helvetica, sans-serif; 
-    left:15px; 
-  }
-
-  .Presentacion-1{
-   position: relative;
-   background-color: black;
-   max-width: 99%;
-   overflow:hidden;
-   text-align: center;
-   height:150px;
- }
-
-
- .Presentacion-1 .Buscar{
-  position:relative;
-  text-decoration: none;
-  width:20em;
-  left:25em;
-  top:-70px;
-  height:40px;
-  border-radius:5px;
-  background-color: antiquewhite;
+  width: 100%;
+  height: 1000px;
 }
 
- .Portada{
+header{
+  width:100%;
+}
+
+
+header .Nav-Opciones{
+position:relative;
+background-color: silver;
+width:100%;
+height: 40px;
+text-align:left;
+top:0px;
+}
+
+.Nav-Opciones ul li{
+  position: relative;
+  display:inline;
+  margin-left: 50px;
+  font-size:25px;
+  left:1100px;
+  top:-6px;
+  
+}
+
+.Nav-Opciones i:hover{
+  border-bottom:5px solid darkred;
+  color:purple
+}
+
+a .Img-Logo{
+  top:-41px;
+  z-index: 2;
+}
+
+.Publicidad-1{
+  position:relative;
+  background-color: black;
+  z-index: 1;
+  width:98%;
+  height:150px;
+  top:-115px;
+  left:10px;
+  
+}
+
+
+
+.Publicidad-1 #Letra-Publicidad{
+  position:relative;
+  font-family: Arial, Helvetica, sans-serif; 
+  color:white;
+  left:400px;
+  width:40%;
+  top:45px;
+  text-align:center;
+  font-size:25px;
+}
+
+.Publicidad-1 .Buscar{
   position:relative;
   background-color:bisque;
-  overflow: hidden;
-  max-width: 99%;
-  height:370px;
-  top:0;
-}
-
-.Portada #Letra-1{
-  position:relative;
-  color:black;
-  max-width: 50%;
-  font-size: 30px;
-  margin-left: 10px;
-  top:-17px;
-  left:-5px;
-}
-
-.Portada .Portada-Img{
-  position:relative;
-  width: 48em;
-  top:-395px;
-  left: 685px;
-  animation: Borde 10s infinite alternate linear;
+  left:1050px;
+  width:15%;
+  height:40px;
+  border-radius: 10px;
+  top:-20px;
 }
 
 
-  .Presentacion-2{
-   position:relative;
-   text-align: center;
-   background-color: DarkRed;
-   font-family: Arial, Helvetica, sans-serif;
-   font-size:9px;  
-   width: 100%;
-   height:38px;
-   top:-12px;
- }
 
 
- .Presentacion-2 h1{
-  position:relative;
-  top:10px;
-  
- }
 
 @media  (max-width:768px){
   
