--- a/css/1.css
+++ b/css/1.css
@@ -1,4 +1,7 @@
-body{background: url("/img/1.png")}
+.Pagina_Principal{
+  background: url("/img/1.png")
+}
+
 
 *{
     position:relative;
@@ -24,7 +27,7 @@ header{
 
 header .Nav-Opciones{
 position:relative;
-background-color: silver;
+background-color: black;
 width:100%;
 height: 40px;
 text-align:left;
@@ -41,12 +44,12 @@ top:0px;
 }
 
 .Nav-Opciones a{
-  color:black;
+  color:white;
 }
 
 .Nav-Opciones i:hover{
   border-bottom:5px solid darkred;
-  color:purple
+  color:bisque;
 }
 
 a .Img-Logo{
@@ -156,52 +159,91 @@ a .Img-Logo{
 
 /*---------------REGISTRATE-------------------*/
 
+.Formulario-Principal{
+  position:relative;
+  background-color: white;
+  text-align: center;
+  width:50%;
+  height: 600px;
+  z-index: 1;
+  left:350px;
+  top:-80px;
+}
+
+
+.Formulario-Principal button{
+  position:relative;
+  margin-left: 20px;
+  text-decoration: none;
+  font-size: 25px;
+  border:none;
+  top:30px;
+  color:black;
+  background-color: transparent;
+}
+
+.Formulario-Principal button:hover{
+  border-bottom: 5px solid red;
+  
+}
+
 .Registrate{
   position: relative;
-  text-align: center;
-  width:40%;
-  left: 350px;
-  top:-50px;
+  background-color: silver;
+  width:65%;
+  left:140px;
+  height:500px;
+  top:40px;
+  box-shadow: 0px 0px 10px 0px;
+  z-index:1;
 }   
 
+legend{
+  /*background-color: silver;*/
+  border-radius: 10px;
+  font-size: 15px;
+  color:navy;
+  width: 100%;
+  height:85px;
+}
 
 
 legend h1{
   position:relative;
-  border-radius: 10px;
-  background-color:black;
-  color:white;
-  /*width:2000%;*/
-  left:30px;
+  top:35px;
 }
-
-.Borde-form{
-  border:10px solid black;
-  width:110%;
-  height:450px;
-  /*background-color:navy;*/
-  border-radius:20px;
-}
-
 
 
 .Input-Registrate{
     position:relative;
-    top:25px;
+    border-right: none;
+    background-color:silver;
+    padding: 0px;
+    margin: 0px;
+    border-left:none;
+    border-top: none;
+    text-decoration: none;
+    top:60px;
     width:70%;
-    border-radius: 10px;
+    height: 40px;
 }
+
+.Input-Registrate:hover{
+ background-color:bisque;
+ border-radius: 10px;
+}
+
 
 .Botton-Enviar{
   position: relative;
-  width: 40%;
-  height:52px;
   background-color:white;
   border: 2px solid black;
   border-radius: 15px;
-  color:black;
   font-size: 25px;
-  top:50px;
+  width: 50%;
+  height:35px;
+  color:black;
+  top:130px;
 }
 
 .Botton-Enviar:hover{
