--- a/css/1.css
+++ b/css/1.css
@@ -170,7 +170,6 @@ a .Img-Logo{
   top:-80px;
 }
 
-
 .Formulario-Principal button{
   position:relative;
   margin-left: 20px;
@@ -196,6 +195,7 @@ a .Img-Logo{
   top:40px;
   box-shadow: 0px 0px 10px 0px;
   z-index:1;
+  display:none;
 }   
 
 legend{
@@ -207,12 +207,10 @@ legend{
   height:85px;
 }
 
-
 legend h1{
   position:relative;
-  top:35px;
+  top:20px;
 }
-
 
 .Input-Registrate{
     position:relative;
@@ -223,7 +221,7 @@ legend h1{
     border-left:none;
     border-top: none;
     text-decoration: none;
-    top:60px;
+    top:40px;
     width:70%;
     height: 40px;
 }
@@ -233,17 +231,17 @@ legend h1{
  border-radius: 10px;
 }
 
-
 .Botton-Enviar{
   position: relative;
-  background-color:trasparent;
+  background-color:silver;
   border:0;
   border-radius: 15px;
   font-size: 25px;
   width: 50%;
   height:35px;
   color:trasparent;
-  top:130px;
+  top:60px;
+  color:darkred;
 }
 
 .Botton-Enviar:hover{
@@ -251,6 +249,64 @@ legend h1{
   background-color:black;
 }
 
+/*----------LOGIN------------*/
+
+
+.Login-P{
+  position: relative;
+  background-color: transparent;
+  width:60%;
+  height:450px;
+  left:150px;
+  top:40px;
+  box-shadow: 0px 0px 10px 0px;
+}
+
+
+.Login-P h1{
+  position: relative;
+  text-align: center;
+  font-size:40px;
+  color:darkred;
+}
+
+#Input{
+  position:relative;
+  border-right: none;
+  background-color:transparent;
+  padding: 0px;
+  margin: 0px;
+  border-left:none;
+  border-top: none;
+  text-decoration: none;
+  top:25px;
+  width:70%;
+  height: 40px;
+}
+
+
+.Recordar-C{
+  position: relative;
+  text-align: center;  
+  width:100%;
+  top: -310px;
+  left:-10px;
+}
+
+.Recordar-C a{
+  position: relative;
+  color:black;
+  font-size:15px;
+  top:-10px;
+}
+
+.Recordar-C  :hover{
+  border:5px solid red;
+}
+
+
+
+/*----------LOGIN------------*/
 
 
 
