--- a/css/1.css
+++ b/css/1.css
@@ -15,7 +15,6 @@
 
   /*--------INDEX--------*/
 .Div-Principal{
-  
   width: 100%;
   height: 1000px;
 }
@@ -23,7 +22,6 @@
 header{
   width:100%;
 }
-
 
 header .Nav-Opciones{
 position:relative;
@@ -44,7 +42,7 @@ top:0px;
 }
 
 .Nav-Opciones a{
-  color:white;
+  color:silver;
 }
 
 .Nav-Opciones i:hover{
@@ -53,17 +51,17 @@ top:0px;
 }
 
 a .Img-Logo{
-  top:-41px;
+  top:-40px;
   z-index: 2;
 }
 
 .Publicidad-1{
   position:relative;
-  background-color: black;
+  background-color: navy;
   z-index: 1;
   width:98%;
   height:150px;
-  top:-115px;
+  top:-116px;
   left:10px;
   
 }
@@ -305,6 +303,5 @@ legend h1{
 #Iniciar .Usuario a{
   color:black;
 }
-
 
 /*----------LOGIN------------*/
