--- a/css/1.css
+++ b/css/1.css
@@ -26,9 +26,9 @@ header{
 header .Nav-Opciones{
 position:relative;
 background-color: black;
+text-align: right;
 width:100%;
 height: 40px;
-text-align:left;
 top:0px;
 }
 
@@ -37,7 +37,7 @@ top:0px;
   display:inline;
   margin-left: 50px;
   font-size:25px;
-  left:1100px;
+  left:-20px;
   top:-10px;
 }
 
@@ -318,13 +318,21 @@ legend h1{
   float:flex;
   top:110px;
   left:50px;
-  color:bisque;
+  color:red;
+}
+
+#slide h3{
+  position:relative;
+  float:flex;
+  text-align: center;
+  top:130px;
 }
 	
 #slide ul{
 	position:relative;
-	top:-60px;
-	left:5px;
+  background-color: red;;
+	top:-150px;
+	left:-10px;
 	width:1000px;
   background:url(../img/Img-3.jpg);
 
