--- a/css/1.css
+++ b/css/1.css
@@ -20,6 +20,19 @@
 
 header{
   width:100%;
+  top:-85px;
+}
+
+header .Logo-Perfumes{
+  text-align:left;
+  font-family: Yellowtail;
+  font-size: 25px;
+  color:bisque;
+  top:-2px;
+}
+
+header a .Logo-Perfumes:hover{
+  color:white;
 }
 
 header .Nav-Opciones{
@@ -37,79 +50,146 @@ top:0px;
   margin-left: 50px;
   font-size:25px;
   left:-20px;
-  top:-10px;
+  top:-66px;
 }
 
 .Nav-Opciones a{
   color:silver;
 }
 
-.Nav-Opciones i:hover{
-  border-bottom:5px solid darkred;
-  color:bisque;
-}
-
-a .Img-Logo{
-  top:-40px;
-  z-index: 2;
-}
-
 .Publicidad-1{
   position:relative;
-  background-color: darkred;
+  background-color: gray;
   z-index: 1;
   width:98%;
   height:150px;
-  top:-116px;
+  top:-121px;
   left:10px;  
+  
 }
 
 .Publicidad-1 #Letra-Publicidad{
   position:relative;
-  font-family: Arial, Helvetica, sans-serif; 
+  font-family: Segoe Print;
   text-transform: uppercase;
   color:white;
   text-align: center;
-  left:400px;
-  max-width:40%;
-  font-size:3vh;
-  top:45px;
+  left:140px;
+  max-width:70%;
+  font-size:4vh;
+  top:20px;
 }
 
 .Publicidad-1 .Buscar{
   position:relative;
   background-color:white;
-  left:1050px;
-  width:20%;
-  height:45px;
+  left:1140px;
+  width:18%;
+  height:40px;
   border-radius: 10px;
-  top:-20px;
+  top:-90px;
 }
 
+ /*-------------SLIDE--------------------------------*/
 
-.Publicidad-2{
-  background-color:bisque;
-  text-align:right;
+ .Div-Slide{
+  position:relative;
   width:98%;
-  height:340px;
   left:10px;
-  top:-137px;
+ background-color: bisque;
+  top:-130px;
 }
 
-.Publicidad-2 h1{
-  width:40%;
+#slide{
+	position:relative;
+  border:5px solid red;
+	margin:auto;
+	width:100%;
+	height: 220px;
+  top:20px;
+	}
+
+.text-slide{
+  float:flex;
   top:110px;
+  left:50px;
   color:black;
 }
 
-.Publicidad-2 .Portada-Img{
-  width:50%;
-  height:325px;
-  left:-10px;
-  animation: Borde 20s infinite alternate linear;
-  border-radius: 10px; 
-  top:-90px; 
+#slide h3{
+  position:relative;
+  float:flex;
+  text-align: center;
+  top:130px;
 }
+	
+#slide ul{
+	position:relative;
+  border:5px solid black;
+	top:-135px;
+	left:-10px;
+	width:100%;
+  /*background:url(../img/Img-3.jpg);*/
+	}
+	
+#slide ul li img{
+	position:absolute;
+	opacity:0;
+	left:0;
+	transition:opacity 1s ease-out;	
+	}
+		
+#slide ul li label{
+	position:relative;
+  border:5px solid gray;
+  text-align: center;
+	z-index:3;
+	float:left;
+	width:10px;
+	height:10px;
+	margin:0 2px;
+	background:gray;
+	cursor:pointer;
+	border-radius:100%;
+	}
+	
+
+#slide ul li label:active{
+  border:5px solid magenta;
+	}
+	
+#slide ul li input{
+	display:none;
+	}
+	
+#slide ul li input#boton-1:checked ~ #foto01{
+	opacity:1;	
+	}
+	
+#slide ul li input#boton-2:checked ~ #foto02{
+	opacity:1;	
+	}
+	
+#slide ul li input#boton-3:checked ~ #foto03{
+	opacity:1;	
+	}
+	
+#slide ul li input#boton-4:checked ~ #foto04{
+	opacity:1;	
+	}
+	
+#slide ul li input#boton-5:checked ~ #foto05{
+	opacity:1;	
+	}
+
+/*------------------------------SLIDE---------*/
+
+
+
+
+
+
+
 
  @keyframes Borde{
 	
@@ -134,6 +214,18 @@ a .Img-Logo{
 	}
 
   }
+
+ 
+
+
+
+
+
+
+
+
+
+
 
 /*--------INDEX--------*/
 .Formulario-P{
@@ -292,100 +384,7 @@ legend h1{
 
 
 
-/*--SLIDE--*/
 
-.Div-Slide{
-  position:relative;
-  width:98%;
-  left:10px;
-  background-color: purple;
-  top:-130px;
-}
-
-#slide{
-	position:relative;
-	margin:auto;
-	width:1000px;
-	height:301px;
-  top:0px;
-	}
-
-.text-slide{
-  float:flex;
-  top:110px;
-  left:50px;
-  color:black;
-}
-
-#slide h3{
-  position:relative;
-  float:flex;
-  text-align: center;
-  top:130px;
-}
-	
-#slide ul{
-	position:relative;
-	top:-135px;
-	left:-10px;
-	width:1000px;
-  background:url(../img/Img-3.jpg);
-
-	}
-	
-#slide ul li img{
-	position:absolute;
-	opacity:0;
-	left:0;
-	transition:opacity 1s ease-out;	
-	}
-		
-#slide ul li label{
-	position:relative;
-	z-index:3;
-	top:295px;
-	left:440px;
-	float:left;
-	width:10px;
-	height:10px;
-	margin:0 2px;
-	background:black;
-	cursor:pointer;
-	border-radius:100%;
-	}
-	
-
-#slide ul li label:active{
-	background:magenta;
-	}
-	
-#slide ul li input{
-	display:none;
-	}
-	
-#slide ul li input#boton-1:checked ~ #foto01{
-	opacity:1;	
-	}
-	
-#slide ul li input#boton-2:checked ~ #foto02{
-	opacity:1;	
-	}
-	
-#slide ul li input#boton-3:checked ~ #foto03{
-	opacity:1;	
-	}
-	
-#slide ul li input#boton-4:checked ~ #foto04{
-	opacity:1;	
-	}
-	
-#slide ul li input#boton-5:checked ~ #foto05{
-	opacity:1;	
-	}
-	
-
-
-/*--------SLIDE---------*/
 
 #Promocion_1{
   position:relative;
@@ -548,7 +547,7 @@ top:10px;
 
 .Tabla-Perfumes .Producto:hover{
   border:5px solid black;
-  background-color:	#800000;
+  background-color:	#d9d9d9;
   color:white;
   border-radius:20px;
 }
